# ml-intro-2022-9

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: python-package.yml
src/ml_intro_2022_9/: data.py  eda.py  git.py  inspect_model.py  pipeline.py  predict.py  train.py
tests/: test_eda.py  test_train.py  train.csv
