[tool.poetry]
name = "ml_intro_2022_9"
version = "0.1.0"
description = ""
authors = ["Feosen <iva588@yandex.ru>"]

[tool.poetry.scripts]
train = "ml_intro_2022_9.train:train"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.3"
click = "^8.1.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"
mypy = "^0.942"
tox = "^3.25.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
